Fix footer display on smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 :root {
   --text: #050505;
   --bg: #fafafa;
-  --primary: #FE7A7D;
-  --secondary: #FEce71;
+  --primary: #fe7a7d;
+  --secondary: #fece71;
   --accent: #11cdee;
   --primarysection: #999999;
   --primarycontrast: #64d97b;
@@ -33,7 +33,7 @@ p {
 
 * {
   box-sizing: border-box;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
@@ -92,7 +92,7 @@ nav .menu {
   font-size: var(--sub);
   width: 100%;
   padding: 1em;
-  transition: 0.5s ease;
+  transition: 0.3s ease-in-out;
 }
 
 .menu-item:hover {
@@ -165,8 +165,7 @@ nav .menu {
   transform: translate(0, -3px);
 }
 
-@media (max-width: 70em)
-{
+@media (max-width: 70em) {
   .hero-text > h1 {
     font-size: 42px;
   }
@@ -176,8 +175,7 @@ nav .menu {
   }
 }
 
-@media (max-width: 60em)
-{
+@media (max-width: 60em) {
   .hero {
     grid-template-columns: 1fr;
   }
@@ -199,6 +197,22 @@ nav .menu {
   }
 }
 
+@media (max-width: 40em) {
+  .hero-text > h1 {
+    font-size: 42px;
+  }
+
+  .header > .hide {
+    display: none;
+  }
+
+  .hero-buttons a {
+    padding: 0.8em 1.6em;
+    border-radius: 6px;
+    font-size: 16px;
+  }
+}
+
 /* topics section */
 
 .topics {
@@ -216,7 +230,7 @@ nav .menu {
   transition: 0.5s ease;
 }
 
-.topics:hover>h2 {
+.topics:hover > h2 {
   transform: translate(-8px, 4px);
   box-shadow: 12px -8px var(--accent);
   background-color: rgba(254, 206, 113, 0.8);
@@ -253,6 +267,8 @@ nav .menu {
   transform: translate(0, -10px);
 }
 
+/* footer */
+
 .footer {
   margin-top: 5em;
   margin-bottom: 5em;
@@ -263,43 +279,73 @@ nav .menu {
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-  gap: 2em;
+  gap: 1em;
   background: var(--text);
   color: var(--bg);
 }
 
 .footer-upper {
   width: 100%;
-  display: flex;
-  justify-content: space-between;
+  min-height: 10em;
+  display: grid;
+  grid-template-columns: 4fr 3fr 3fr;
+  gap: 1em;
 }
 
-.color-effect-contrast {
+.footer h3 {
+  font-size: var(--subtitle);
+}
+
+.footer p {
+  font-size: var(--small);
+}
+
+.footer-upper .logo {
+  grid-column-start: 3;
+  justify-self: flex-end;
+  padding: 0.5em;
+}
+
+.footer-upper .logo a {
+  font-size: var(--h2);
+  color: var(--bg);
+}
+
+.color-effect-contrast,
+.color-effect-contrast i {
   background: linear-gradient(120deg, var(--primarycontrast), var(--accent));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
-.extras {
-  align-items: flex-end;
+.footer .container {
+  padding: 0.5em;
+  grid-row: 1 / span 2;
 }
 
-.footer .extras .logo a {
-  font-size: var(--h2);
-  color: var(--bg);
+.icons .fa {
+  font-size: var(--p);
+  transition: 0.5s;
+  padding: 0.5em;
+}
+
+.icons .fa:hover {
+  transform: translate(-6px, 3px);
+  box-shadow: 6px -3px var(--accent);
 }
 
 .attribution {
-  margin-top: 5em;
+  grid-column: 2 / span 2;
+  padding-right: 0.5em;
+  margin-top: 2em;
   align-self: flex-end;
-  max-width: 300px;
   opacity: 0.6;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: flex-end;
 }
 
-.attribution p {
+.footer .attribution p {
   font-size: 10px;
 }
 
@@ -316,42 +362,55 @@ nav .menu {
 }
 
 .footer-box {
+  padding: 0 0.5em;
   width: 100%;
+  margin-top: 10px;
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-
-.sub {
-  margin-top: 8px;
-}
-
-.info {
-  width: 100%;
-  display: flex;
+  flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
 
-.footer-box .icons {
-  display: flex;
-  justify-content: space-around;
-  gap: 1em;
+@media (max-width: 60em) {
+  .footer .feedback {
+    width: 100%;
+    grid-column: 1 / span 2;
+    grid-row: 1;
+  }
+  .footer .connect {
+    grid-row-start: 2;
+    grid-column: 1;
+  }
 }
 
-.fa {
-  color: var(--bg);
-  font-size: var(--p);
-  transition: 0.5s;
-  padding: 0.5em;
+@media (max-width: 50em) {
+  .footer-upper {
+    grid-template-columns: 1fr;
+  }
+
+  .footer-upper .logo {
+    justify-self: flex-start;
+  }
+
+  .footer .footer-upper div {
+    grid-column: 1;
+    grid-row: auto;
+  }
+  .footer-box {
+    flex-direction: column;
+    align-items: center;
+    gap: 1em;
+  }
 }
 
-a .fa:hover {
-  transform: translate(-8px, 4px);
-  box-shadow: 8px -4px var(--accent);
-}
+@media (max-width: 40em) {
+  .footer {
+    padding: 2em 10%;
+  }
 
-.copyright {
-  font-size: var(--small);
+  .footer h3 {
+    font-size: 20px;
+  }
 }
 
 .coming-soon {
